--- a/TDUICatalog/Base.lproj/Main.storyboard
+++ b/TDUICatalog/Base.lproj/Main.storyboard
@@ -267,15 +267,15 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EWc-wJ-lt5">
-                                                    <rect key="frame" x="15" y="5" width="32" height="20"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Sliders" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EWc-wJ-lt5">
+                                                    <rect key="frame" x="15" y="5" width="50" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nOT-2u-PwE">
-                                                    <rect key="frame" x="15" y="25" width="41" height="14"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="TDSlidersViewController" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nOT-2u-PwE">
+                                                    <rect key="frame" x="15" y="25" width="128" height="14"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -283,6 +283,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="j7H-eu-h9I" kind="showDetail" id="ldB-fb-rdr"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="mPV-pp-Ffy" detailTextLabel="7id-vg-xnC" style="IBUITableViewCellStyleSubtitle" id="jFD-QB-xml">
                                         <rect key="frame" x="0.0" y="504" width="600" height="44"/>
@@ -1407,6 +1410,116 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mLT-7q-hbH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-821" y="872"/>
+        </scene>
+        <!--Sliders-->
+        <scene sceneID="Dxh-NG-ddy">
+            <objects>
+                <tableViewController id="zD9-T1-tow" customClass="TDSlidersViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="qVh-Fz-JUr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="DEFAULT" id="v0s-EG-4X9">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Key-ae-XeX">
+                                        <rect key="frame" x="0.0" y="114" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Key-ae-XeX" id="5YW-tO-cHz">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="k1M-Pe-O7J">
+                                                    <rect key="frame" x="28" y="5" width="544" height="31"/>
+                                                </slider>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="k1M-Pe-O7J" firstAttribute="leading" secondItem="5YW-tO-cHz" secondAttribute="leadingMargin" constant="22" id="4n5-81-PCy"/>
+                                                <constraint firstItem="k1M-Pe-O7J" firstAttribute="centerX" secondItem="5YW-tO-cHz" secondAttribute="centerX" id="Wid-Uw-4KI"/>
+                                                <constraint firstItem="k1M-Pe-O7J" firstAttribute="centerY" secondItem="5YW-tO-cHz" secondAttribute="centerY" constant="-1.5" id="dHV-DC-HPr"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="TINTED" id="Gey-hn-OBk">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="pG8-mJ-P4U">
+                                        <rect key="frame" x="0.0" y="209" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pG8-mJ-P4U" id="uIi-Ym-rnp">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4qc-aL-gSs">
+                                                    <rect key="frame" x="28" y="7" width="544" height="31"/>
+                                                </slider>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4qc-aL-gSs" firstAttribute="centerX" secondItem="uIi-Ym-rnp" secondAttribute="centerX" id="XQ3-gv-90E"/>
+                                                <constraint firstItem="4qc-aL-gSs" firstAttribute="centerY" secondItem="uIi-Ym-rnp" secondAttribute="centerY" id="ZUn-Um-Bh5"/>
+                                                <constraint firstItem="4qc-aL-gSs" firstAttribute="leading" secondItem="uIi-Ym-rnp" secondAttribute="leadingMargin" constant="22" id="mtl-Ga-Dfm"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="CUSTOM" id="op1-ga-yVz">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="WMW-lv-Itw">
+                                        <rect key="frame" x="0.0" y="304" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WMW-lv-Itw" id="4xZ-5c-pb3">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7bb-k2-GHu">
+                                                    <rect key="frame" x="28" y="5" width="544" height="31"/>
+                                                </slider>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7bb-k2-GHu" firstAttribute="centerX" secondItem="4xZ-5c-pb3" secondAttribute="centerX" id="TOR-bJ-8mf"/>
+                                                <constraint firstItem="7bb-k2-GHu" firstAttribute="bottom" secondItem="4xZ-5c-pb3" secondAttribute="bottomMargin" id="fys-da-1um"/>
+                                                <constraint firstItem="7bb-k2-GHu" firstAttribute="leading" secondItem="4xZ-5c-pb3" secondAttribute="leadingMargin" constant="22" id="i1Z-Lm-WDB"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="zD9-T1-tow" id="q53-5h-tGu"/>
+                            <outlet property="delegate" destination="zD9-T1-tow" id="ioG-tQ-nad"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Sliders" id="e38-OC-jdK"/>
+                    <connections>
+                        <outlet property="customSlider" destination="7bb-k2-GHu" id="MQK-yG-hcS"/>
+                        <outlet property="defaultSlider" destination="k1M-Pe-O7J" id="mCA-2d-TN2"/>
+                        <outlet property="tintedSlider" destination="4qc-aL-gSs" id="7dx-LC-w0z"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1DK-OV-Qn7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-199" y="1598"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Rax-CN-yzo">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j7H-eu-h9I" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7wo-oA-xfO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="zD9-T1-tow" kind="relationship" relationship="rootViewController" id="sjb-k6-STC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aPU-7R-SYq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-199" y="872"/>
         </scene>
     </scenes>
 </document>
